--- a/wiki/BlueboxHelp.wiki
+++ b/wiki/BlueboxHelp.wiki
@@ -1,5 +1,10 @@
-=What is it?=
+=Installing=
+Download the war file from [https://drive.google.com/folderview?id=0B_idaoMmuNnyYW9FS1paTEhuSXc&usp=sharing here].
+Drop the war file into your favourite application server.
+You will require Java 7.
 
+
+=What is it?=
 Many teams develop software that rely heavily on sending emails (for sign-up, social software notifications etc).
 Properly testing this software requires multiple "fake" email addesses to allow testing of the capabilities of the software from various points of view and roles
 Traditionally we either used Google Mail (which allowed random prefixes to be added to email addresses), or other services such as Mailinator
