--- a/bluebox/src/main/resources/mailDetails_fr.properties
+++ b/bluebox/src/main/resources/mailDetails_fr.properties
@@ -4,5 +4,8 @@ bcc=Bcc:
 date=Date:
 html=Html
 text=Texte
+security=Securite
+scantitle=Securite Scan Issues({0})
+scantitleunderline=--------------------
 attachments=Attachments:
 downloading=Telechargement en cours...
