--- a/trunk/bluebox/src/main/resources/stats_fr.properties
+++ b/trunk/bluebox/src/main/resources/stats_fr.properties
@@ -2,4 +2,5 @@ traffic_title=Historique
 traffic_text1=Plus de
 traffic_text2=emails servir
 recent_title=Le plus recent
-active_title=Le plus actif
+active_title=Boite le plus actif
+sender_title=Le plus actif
