Fixed stats default text for recent Simplified mail detail style Fixed missing detail date

--- a/bluebox/src/main/resources/stats_fr.properties
+++ b/bluebox/src/main/resources/stats_fr.properties
@@ -4,3 +4,4 @@ traffic_text2=emails servir
 recent_title=Le plus recent
 active_title=Boite le plus actif
 sender_title=Le plus actif
+no_update=Aucune mise a jour
