--- a/trunk/bluebox/src/main/resources/inboxDetails_fr.properties
+++ b/trunk/bluebox/src/main/resources/inboxDetails_fr.properties
@@ -6,8 +6,8 @@ upload=Upload
 uploadTooltip=Upload an email from *.eml or text file
 refresh=Actualiser
 refreshTooltip=Vérifier les nouveaux messages
-atom=S'abonner
-atomTooltip=S'abonner à un flux ATOM de cette boîte de réception
+rss=S'abonner
+rssTooltip=S'abonner à un flux RSS de cette boîte de réception
 delete=Supprimer
 deleteTooltip=Déplacer le message sélectionné à la corbeille
 search=Recherche
