--- a/bluebox/src/main/resources/stats_fr.properties
+++ b/bluebox/src/main/resources/stats_fr.properties
@@ -5,3 +5,4 @@ recent_title=Le plus recent
 active_title=Boite le plus actif
 sender_title=Le plus actif
 no_update=Aucune mise a jour
+uptime=Actif
