--- a/wiki/BlueboxHelp.wiki
+++ b/wiki/BlueboxHelp.wiki
@@ -2,9 +2,11 @@
 Download the war file from [https://drive.google.com/folderview?id=0B_idaoMmuNnyYW9FS1paTEhuSXc&usp=sharing here].
   * Drop the war file into your favourite application server.
 This one requires no special setup, and uses an embedded Derby database. 
-  * If you want you can edit bluebox.properties and select the MongoDB driver instead - especially useful for larger mailboxes.
+  * if MongoDB is running on the machine it will be used by default, otherwise an embedded Apache Derby DB will be created and started.
   * You will require Java 7.
-  * access to the administration page requires user/password for role "tomcat", so edit your tomcat-users.conf file or whatever your app server uses
+  * access to the administration page requires user/password for role "bluebox", so edit your tomcat-users.conf file or whatever your app server uses
+  * the SMTP server runs by default on port 2500, so you need to map to port 25 using the following command : iptables -t nat -A PREROUTING -i eth0 -p tcp -m tcp --dport 25 -j REDIRECT --to-ports 2500
+  * Windows users can edit bluebox.properties in the expanded war directory and change the port setting manually to port 25.
 
 
 =What is it?=
