--- a/bluebox/src/main/resources/footer_fr.properties
+++ b/bluebox/src/main/resources/footer_fr.properties
@@ -1,2 +1,4 @@
-iuo=Pour usage interne seulement
 title=BoiteBleu
+copyright=&copy; Tous droits réservés par l'auteur
+contact=Pour signaler des problèmes, contactez 
+contact_email=<a href="https://code.google.com/p/bluebox/">Projet Accueil</a>
