Added SPAM deletion functionality

--- a/bluebox/src/main/resources/inboxDetails_fr.properties
+++ b/bluebox/src/main/resources/inboxDetails_fr.properties
@@ -10,6 +10,9 @@ rss=S'abonner
 rssTooltip=S'abonner à un flux RSS de cette boîte de réception
 delete=Supprimer
 deleteTooltip=Déplacer le message sélectionné à la corbeille
+spam=Spam
+spamTooltip=Marquer ce mail comme spam, et ajouter l'expéditeur à la liste noire
+confirm_spam=Cette opération va supprimer tous les messages de l'expéditeur sélectionné
 search=Recherche
 searchTooltip=Recherche contenu
 error.noselection=Pas de message sélectionné
