Allow reset of lists

--- a/bluebox/src/main/resources/info_fr.properties
+++ b/bluebox/src/main/resources/info_fr.properties
@@ -6,3 +6,5 @@ fromwhitelist=Sender white-list
 messageage=Heures de conserver les messages
 messagemax=Limiter la taille de la boîte de réception à
 trashage=Heures de garder les messages supprimés
+reset=Reinitalise les blacklists
+resetButton=Reset
