Implemented smtp blacklist

--- a/bluebox/src/main/resources/inboxDetails_fr.properties
+++ b/bluebox/src/main/resources/inboxDetails_fr.properties
@@ -12,7 +12,7 @@ delete=Supprimer
 deleteTooltip=Déplacer le message sélectionné à la corbeille
 spam=Spam
 spamTooltip=Marquer ce mail comme spam, et ajouter l'expéditeur à la liste noire
-confirm_spam=Cette opération va supprimer tous les messages de l'expéditeur sélectionné
+confirm_spam=Cette opération va supprimer tous les messages provenant de la meme serveur smtp que l'expéditeur sélectionné
 search=Recherche
 searchTooltip=Recherche contenu
 error.noselection=Pas de message sélectionné
