--- a/bluebox/src/main/resources/admin_fr.properties
+++ b/bluebox/src/main/resources/admin_fr.properties
@@ -1,6 +1,7 @@
 title=Administration
 generate_action=Générer faux courriels
 delete_all_action=Supprimer tous les e-mails
+purge_deleted=Supprimer les mails deja effacer
 clear_errors_action=Supprimer journaux des erreurs
 prune_action=Expirer et taille emails
 set_global_action=Configure le nombre de courrier
