added function to set smtp blacklist

--- a/bluebox/src/main/resources/admin_fr.properties
+++ b/bluebox/src/main/resources/admin_fr.properties
@@ -15,3 +15,4 @@ confirm_title=Se il vous plaît confirmer
 execute=Exécuter
 taskStarted=Tache commencé
 taskAborted=Tâche abandonne - déjà en cours d'exécution
+set_smtpblacklist_action=Configure SMTP blacklist
