--- a/wiki/BlueboxHelp.wiki
+++ b/wiki/BlueboxHelp.wiki
@@ -1,26 +1,39 @@
-=Installing=
-Download the war file from [https://drive.google.com/folderview?id=0B_idaoMmuNnyYW9FS1paTEhuSXc&usp=sharing here].
-  * Drop the war file into your favourite application server.
-This one requires no special setup, and uses an embedded Derby database. 
-  * if MongoDB is running on the machine it will be used by default, otherwise an embedded Apache Derby DB will be created and started.
-  * You will require Java 7.
-  * access to the administration page requires user/password for role "bluebox", so edit your tomcat-users.conf file or whatever your app server uses
-  * the SMTP server runs by default on port 2500, so you need to map to port 25 using the following command : iptables -t nat -A PREROUTING -i eth0 -p tcp -m tcp --dport 25 -j REDIRECT --to-ports 2500
-  * to persist this across reboots, save the settings : /sbin/service iptables save
-  * Windows users can edit bluebox.properties in the expanded war directory and change the port setting manually to port 25.
-
-
-=What is it?=
+=Bluebox=
 Many teams develop software that rely heavily on sending emails (for sign-up, social software notifications etc).
 Properly testing this software requires multiple "fake" email addesses to allow testing of the capabilities of the software from various points of view and roles
 Traditionally we either used Google Mail (which allowed random prefixes to be added to email addresses), or other services such as Mailinator
 However sending such emails from unreleased products, potentially containing trade secrets, non-public product information and other private information to the public internet is not feasible, and an internal service was needed.
 
+Bluebox is a fully functional promiscuous, non-forwarding SMTP server and mailbox web interface to allow receiving of arbitrary emails for use in  testing and development environments.
+Inspired by the very useful Mailinator service.
+Provides API for scripted use by test automation.
+
+
+=Installing=
+==Via RPM==
+You can set up RPM based installation by adding the following to bluebox.repo in your /etc/yum.repos.d directory :
+{{{
+[bluebox]
+name=Bluebox Repository
+baseurl=https://stephen-kruger.github.io/bluebox/yum/noarch
+enabled=1
+gpgcheck=0
+}}}
+The simply run "sudo yum install bluebox"
+
+==Manually using war file==
+Download the war file from [https://drive.google.com/folderview?id=0B_idaoMmuNnyYW9FS1paTEhuSXc&usp=sharing=sharing here].
+  * Drop the war file into your favourite application server.
+This one requires no special setup, and uses an embedded Derby database. 
+  * If you want you can edit bluebox.properties and select the MongoDB driver instead - especially useful for larger mailboxes.
+  * You will require Java 7.
+  * access to the administration page requires user/password for role "tomcat", so edit your tomcat-users.conf file or whatever your app server uses
+
 =How do I use it?=
-The easiest way : simply send an email to any address you like using the @bluebox.lotus.com domain
-For example send a test mail using your Notes client to test@bluebox.lotus.com or fake.mail@bluebox.lotus.com
+The easiest way : simply send an email to any address you like using the @bluebox.xxx.com domain
+For example send a test mail using your Notes client to test@bluebox.xxx.com or fake.mail@bluebox.xxx.com
 Then enter the email address into the form here at BlueBox to show your inbox
-Another way : set your SMTP server to bluebox.lotus.com, you can send emails to any address and any domain (although they will all be delivered and available only on bluebox.lotus.com)
+Another way : set your SMTP server to bluebox.xxx.com, you can send emails to any address and any domain (although they will all be delivered and available only on bluebox.xxx.com)
 
 =How long will my email be available?=
 Messages will be automatically deleted after 48 hours
@@ -36,7 +49,7 @@ It is possible to defend against some of these poorly written relay scans by int
 
 =Can I send mails to other domains?=
 BlueBox itself does not do any mail forwarding, only incoming mail is accepted
-It's not very scrupulous about destination addresses, so if you have set bluebox as your smtp server, you can send to any hostnames that you like. Such as stephen@ibm.com, steve@lotuslive.com, or any other domain you might want
+It's not very scrupulous about destination addresses, so if you have set bluebox as your smtp server, you can send to any hostnames that you like. Such as stephen@yahoo.com, steve@xxx.com, or any other domain you might want
 
 =Terms and conditions of usage=
 Please do not use BlueBox for any business critical applications
