--- a/trunk/bluebox/src/main/resources/info_fr.properties
+++ b/trunk/bluebox/src/main/resources/info_fr.properties
@@ -4,7 +4,8 @@ fromblacklist=Sender liste noire
 towhitelist=Destinataire white-list
 fromwhitelist=Sender white-list
 messageage=Heures de conserver les messages
-messagemax=Limiter la taille de la boîte de réception à
+messagemax=Limiter la nombres des couriel à
+messagemaxsize=Taille maximum par message(MB)
 trashage=Heures de garder les messages supprimés
 reset=Reinitalise les blacklists
 resetButton=Reset
