Mongo 3 support complete Added header viewing support

--- a/bluebox/src/main/resources/mailDetails_fr.properties
+++ b/bluebox/src/main/resources/mailDetails_fr.properties
@@ -4,6 +4,8 @@ bcc=Bcc:
 date=Date:
 html=Html
 text=Texte
+raw=Nue
+headers=Headers
 security=Securite
 scantitle=Securite Scan Issues({0})
 scantitleunderline=--------------------
