--- a/bluebox/src/main/resources/info_fr.properties
+++ b/bluebox/src/main/resources/info_fr.properties
@@ -9,3 +9,4 @@ messagemaxsize=Taille maximum par message(MB)
 trashage=Heures de garder les messages supprimés
 reset=Reinitalise les blacklists
 resetButton=Reset
+spoolcount=Nombres des couriels actuels
