Fixed issue with trim not processing all the entires and stopping early.

--- a/bluebox/src/main/resources/admin_fr.properties
+++ b/bluebox/src/main/resources/admin_fr.properties
@@ -3,7 +3,8 @@ generate_action=Générer faux courriels
 delete_all_action=Supprimer tous les e-mails
 purge_deleted=Supprimer les mails deja effacer
 clear_errors_action=Supprimer journaux des erreurs
-prune_action=Expirer et taille emails
+prune_action=Reduire le taille maximal de inbox
+expire_action=Enleve les email perime
 set_global_action=Configure le nombre de courrier
 rebuild_search_action=Reconstruire les index de recherche
 db_maintenance_action=Effectuer la maintenance de base de données
