More functionality added

--- a/bluebox/src/main/resources/menu_fr.properties
+++ b/bluebox/src/main/resources/menu_fr.properties
@@ -2,6 +2,7 @@ title=BoiteBleu
 home=Boites de reception
 upload=Telecharge
 info=Info
+mobile=Mobile
 admin=Administration
 docs=Documentation
 errors=Erreurs
