Added smtp port to info page

--- a/src/main/resources/info_fr.properties
+++ b/src/main/resources/info_fr.properties
@@ -1,8 +1,10 @@
 title=Informations
+smtpblacklist=Banned SMTP servers
 toblacklist=Destinataire liste noire
 fromblacklist=Sender liste noire
 towhitelist=Destinataire white-list
 fromwhitelist=Sender white-list
+smtpport=SMTP port
 messageage=Heures de conserver les messages
 messagemax=Limiter la nombres des couriel à
 messagemaxsize=Taille maximum par message(MB)
